dependencies relations fixed + file names for integrations (earlier calendar-bot) domain + tool for dependencies fixed

--- a/Dependencies-analizer/files/modules-graph.html
+++ b/Dependencies-analizer/files/modules-graph.html
@@ -15,9 +15,10 @@
           graph LR
   AppModule-->DiscordCommandsModule
   DiscordCommandsModule-->AxiosModule
-  AppModule-->CalendarBotModule
-  CalendarBotModule-->RolesModule
+  AppModule-->DiscordInteractionsModule
+  DiscordInteractionsModule-->RolesModule
   RolesModule-->AxiosModule
+  DiscordInteractionsModule-->UsersModule
   AppModule-->AuthzModule
   AuthzModule-->JwtModule
   AuthzModule-->UsersModule
