whitelist guard with service sceletton added and connected to discord interactions module

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -66,6 +66,9 @@
       },
       "RolesGuardService": {
         "method": "standard"
+      },
+      "WhitelistGuardService": {
+        "method": "standard"
       }
     },
     "controllers": [
