solution with filtering integrations in form of responses for button clicks... to change for easier way

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -55,7 +55,8 @@
     "name": "DiscordInteractionsModule",
     "imports": [
       "RolesModule",
-      "UsersModule"
+      "UsersModule",
+      "UserManagementModule"
     ],
     "providers": {
       "DiscordInteractionService": {
@@ -109,6 +110,20 @@
     "exports": [
       "UsersService"
     ]
+  },
+  {
+    "name": "UserManagementModule",
+    "imports": [],
+    "providers": {
+      "UserManagementService": {
+        "method": "standard"
+      },
+      "UserManagementRepository": {
+        "method": "standard"
+      }
+    },
+    "controllers": [],
+    "exports": []
   },
   {
     "name": "AuthzModule",
