--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -19,6 +19,7 @@
   DiscordInteractionsModule-->RolesModule
   RolesModule-->AxiosModule
   DiscordInteractionsModule-->UsersModule
+  DiscordInteractionsModule-->UserManagementModule
   AppModule-->AuthzModule
   AuthzModule-->JwtModule
   AuthzModule-->UsersModule
