discord integrations commands components added, handlers in progress...

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -123,7 +123,9 @@
       }
     },
     "controllers": [],
-    "exports": []
+    "exports": [
+      "UserManagementService"
+    ]
   },
   {
     "name": "AuthzModule",
