users fetch from discord in user management service and putting in options to user whitelisting - to develop

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -113,7 +113,9 @@
   },
   {
     "name": "UserManagementModule",
-    "imports": [],
+    "imports": [
+      "AxiosModule"
+    ],
     "providers": {
       "UserManagementService": {
         "method": "standard"
