--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -20,6 +20,7 @@
   RolesModule-->AxiosModule
   DiscordInteractionsModule-->UsersModule
   DiscordInteractionsModule-->UserManagementModule
+  UserManagementModule-->AxiosModule
   AppModule-->AuthzModule
   AuthzModule-->JwtModule
   AuthzModule-->UsersModule
