--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -21,6 +21,8 @@
   DiscordInteractionsModule-->UsersModule
   DiscordInteractionsModule-->UserManagementModule
   UserManagementModule-->AxiosModule
+  DiscordInteractionsModule-->AxiosModule
+  DiscordInteractionsModule-->StateModule
   AppModule-->AuthzModule
   AuthzModule-->JwtModule
   AuthzModule-->UsersModule
