integration-service split to slashcommands and components services

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -61,7 +61,10 @@
       "StateModule"
     ],
     "providers": {
-      "DiscordInteractionService": {
+      "IntegrationSlashCommandsService": {
+        "method": "standard"
+      },
+      "IntegrationComponentsService": {
         "method": "standard"
       },
       "AuthenticatedGuardService": {
