component provider external to integrations services

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -75,6 +75,9 @@
       },
       "WhitelistGuardService": {
         "method": "standard"
+      },
+      "ResponseComponentsProvider": {
+        "method": "standard"
       }
     },
     "controllers": [
