commands / interactions lists moved as setup higher, mods in roles service and roles service

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -122,7 +122,8 @@
   {
     "name": "UserManagementModule",
     "imports": [
-      "AxiosModule"
+      "AxiosModule",
+      "RolesModule"
     ],
     "providers": {
       "UserManagementService": {
