--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -21,6 +21,7 @@
   DiscordInteractionsModule-->UsersModule
   DiscordInteractionsModule-->UserManagementModule
   UserManagementModule-->AxiosModule
+  UserManagementModule-->RolesModule
   DiscordInteractionsModule-->AxiosModule
   DiscordInteractionsModule-->StateModule
   AppModule-->AuthzModule
