refactor: users + whitelisted users + mentors in one user DB with more params.

--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -19,9 +19,8 @@
   DiscordInteractionsModule-->RolesModule
   RolesModule-->AxiosModule
   DiscordInteractionsModule-->UsersModule
-  DiscordInteractionsModule-->UserManagementModule
-  UserManagementModule-->AxiosModule
-  UserManagementModule-->RolesModule
+  UsersModule-->AxiosModule
+  UsersModule-->RolesModule
   DiscordInteractionsModule-->AxiosModule
   DiscordInteractionsModule-->StateModule
   AppModule-->AuthzModule
