forcing google-oauth2 login when user is a person to meet (host)

--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -26,6 +26,7 @@
   AppModule-->AuthzModule
   AuthzModule-->JwtModule
   AuthzModule-->UsersModule
+  AuthzModule-->RolesModule
   AuthzModule-->PassportModule
   AppModule-->DatabaseModule
       </pre>
