--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -142,6 +142,7 @@
     "imports": [
       "JwtModule",
       "UsersModule",
+      "RolesModule",
       "PassportModule"
     ],
     "providers": {
