--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -77,6 +77,9 @@
       },
       "ResponseComponentsProvider": {
         "method": "standard"
+      },
+      "CalendarService": {
+        "method": "standard"
       }
     },
     "controllers": [
