checking meeting topic and duration flow with responsung doscord components

--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -23,11 +23,12 @@
   UsersModule-->RolesModule
   DiscordInteractionsModule-->AxiosModule
   DiscordInteractionsModule-->StateModule
-  AppModule-->AuthzModule
+  DiscordInteractionsModule-->AuthzModule
   AuthzModule-->JwtModule
   AuthzModule-->UsersModule
   AuthzModule-->RolesModule
   AuthzModule-->PassportModule
+  AppModule-->AuthzModule
   AppModule-->DatabaseModule
       </pre>
       </body>
