--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -57,7 +57,8 @@
       "RolesModule",
       "UsersModule",
       "AxiosModule",
-      "StateModule"
+      "StateModule",
+      "AuthzModule"
     ],
     "providers": {
       "IntegrationSlashCommandsService": {
@@ -79,6 +80,12 @@
         "method": "standard"
       },
       "CalendarService": {
+        "method": "standard"
+      },
+      "MeetingService": {
+        "method": "standard"
+      },
+      "ResponseComponentsHelperService": {
         "method": "standard"
       }
     },
@@ -160,7 +167,8 @@
       "AuthzController"
     ],
     "exports": [
-      "PassportModule"
+      "PassportModule",
+      "AuthzService"
     ]
   },
   {
