calendar class as a service

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -84,6 +84,9 @@
       },
       "ResponseComponentsHelperService": {
         "method": "standard"
+      },
+      "CalendarService": {
+        "method": "standard"
       }
     },
     "controllers": [
