response provider refactored to use rest only and aditing messages via type = 7, refactored all flows with interactions accurratly + stateService (lastMessageToken) not necessary

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -87,6 +87,12 @@
       },
       "CalendarService": {
         "method": "standard"
+      },
+      "InteractionsGetMeetingService": {
+        "method": "standard"
+      },
+      "InteractionsBotManagingService": {
+        "method": "standard"
       }
     },
     "controllers": [
