axsios provider containing discord, authz, google instances

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -159,7 +159,8 @@
       "JwtModule",
       "UsersModule",
       "RolesModule",
-      "PassportModule"
+      "PassportModule",
+      "AxiosModule"
     ],
     "providers": {
       "JwtStrategy": {
