--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -28,6 +28,7 @@
   AuthzModule-->UsersModule
   AuthzModule-->RolesModule
   AuthzModule-->PassportModule
+  AuthzModule-->AxiosModule
   AppModule-->AuthzModule
   AppModule-->DatabaseModule
       </pre>
