refresh google token implemented

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -151,7 +151,8 @@
     "name": "CalendarModule",
     "imports": [
       "AuthzModule",
-      "AxiosModule"
+      "AxiosModule",
+      "UsersModule"
     ],
     "providers": {
       "CalendarService": {
