--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -31,6 +31,7 @@
   AuthzModule-->PassportModule
   AuthzModule-->AxiosModule
   CalendarModule-->AxiosModule
+  CalendarModule-->UsersModule
   AppModule-->AuthzModule
   AppModule-->DatabaseModule
       </pre>
