interaction controller refactor

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -72,7 +72,7 @@
       "IntegrationSlashCommandsService": {
         "method": "standard"
       },
-      "IntegrationComponentsService": {
+      "IntegrationService": {
         "method": "standard"
       },
       "AuthenticatedGuardService": {
