--- a/DEV-dependencies-analizer/files/modules-graph.html
+++ b/DEV-dependencies-analizer/files/modules-graph.html
@@ -33,10 +33,10 @@
   UsersModule-->ConfigModule
   UsersModule-->ConfigHostModule
   DiscordInteractionsModule-->ApisModule
-  DiscordInteractionsModule-->CalendarModule
-  CalendarModule-->ApisModule
-  CalendarModule-->ConfigModule
-  CalendarModule-->ConfigHostModule
+  DiscordInteractionsModule-->HostCalendarModule
+  HostCalendarModule-->ApisModule
+  HostCalendarModule-->ConfigModule
+  HostCalendarModule-->ConfigHostModule
   DiscordInteractionsModule-->ConfigModule
   DiscordInteractionsModule-->ConfigHostModule
   AppModule-->AuthzModule
@@ -49,7 +49,7 @@
   PassportModule-->ConfigModule
   PassportModule-->ConfigHostModule
   AuthzModule-->ApisModule
-  AuthzModule-->CalendarModule
+  AuthzModule-->HostCalendarModule
   AuthzModule-->ConfigModule
   AuthzModule-->ConfigHostModule
   AppModule-->DatabaseModule
