destructur in mappers + method names + global exception filter

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -23,7 +23,17 @@
       "DatabaseModule",
       "ConfigHostModule"
     ],
-    "providers": {},
+    "providers": {
+      "APP_FILTER (UUID: 1558d8f1c1584e6b6d2f1)": {
+        "method": "standard"
+      },
+      "ResponseComponentsProvider": {
+        "method": "standard"
+      },
+      "DiscordApiService": {
+        "method": "standard"
+      }
+    },
     "controllers": [],
     "exports": []
   },
