unit test of users repository sterted

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -24,7 +24,7 @@
       "ConfigHostModule"
     ],
     "providers": {
-      "APP_FILTER (UUID: 42b56fd247ef0fed65310)": {
+      "APP_FILTER (UUID: 223e3e9610902ba1626dd)": {
         "method": "standard"
       },
       "ResponseComponentsProvider": {
@@ -129,7 +129,7 @@
       "IntegrationSlashCommandsService": {
         "method": "standard"
       },
-      "IntegrationService": {
+      "InteractionService": {
         "method": "standard"
       },
       "AuthenticatedGuardService": {
