nest logger used to log errors from filters

--- a/DEV-dependencies-analizer/files/modules-details.html
+++ b/DEV-dependencies-analizer/files/modules-details.html
@@ -123,6 +123,9 @@
       "ConfigHostModule"
     ],
     "providers": {
+      "Logger": {
+        "method": "standard"
+      },
       "IntegrationSlashCommandsService": {
         "method": "standard"
       },
@@ -224,6 +227,9 @@
       "ConfigHostModule"
     ],
     "providers": {
+      "Logger": {
+        "method": "standard"
+      },
       "JwtStrategy": {
         "method": "standard"
       },
